made benchmarks show min median and maxium times